Do not download and start older MArathon versions.